--- a/components/forms/forms.module.css
+++ b/components/forms/forms.module.css
@@ -2,7 +2,7 @@
   position: absolute;
 
   padding: 0.5em;
-  border-radius: 0.1em;
+  border-radius: 1em;
 
   width: fit-content;
   margin-left: 0.2em;
@@ -11,19 +11,31 @@
   margin-right: auto;
   margin-left: auto;
   z-index: 10000;
+
+  transform-origin: top right;
+  animation: slideDown 0.5s ease forwards;
+}
+
+@keyframes slideDown {
+  0% {
+    transform: scale(0,0);
+  }
+  100% {
+    transform: scale(1,1);
+  }
 }
 
 .closeButton {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 0.2em;
+  top: 0.2em;
   width: 1.3rem;
   height: 1.3rem;
-  color: black;
+  color: var(--main-color-dark);
   background-color: transparent;
   text-shadow: 2px 2px 2px white;
-  border-radius: 0.3em;
-  border: 1px solid white;
+/*  border-radius: 0.3em;
+  border: 1px solid white;*/
   line-height: 0.5em;
   cursor: pointer;
 }
