--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: auto;
+  height: 100svh;;
   min-height: 100svh;
 }
 
@@ -52,9 +52,11 @@ body {
 }
 
 .mainBlock{
-  flex-grow: 1;
+  flex: 1 auto;
   display: flex;
   flex-direction: column;
+  min-width: 0;
+  min-height: 0;
 }
 
 .mainButton {
@@ -110,7 +112,6 @@ body {
 }
 
 .centerPaper{
-  align-self: flex-end;
   width: 30%;
   height: 50svh;
   margin-top: 10svh;
@@ -120,6 +121,29 @@ body {
   overflow: auto;
   border-radius: 1rem;
   padding: 1rem;
+  
+}
+
+.centerWindow{
+  display: flex;
+  width: calc(100% - 10rem);
+  flex: 1;
+  border-radius: 5rem;
+  margin: 5rem;
+  padding: 2rem;
+  min-width: 0;
+  min-height: 0;
+}
+
+.blackWindow{
+  display:flex;
+  background-color: black;
+  flex: 1;
+  border-radius: 3rem;
+  box-shadow: 0 0 1rem var(--main-color-light) inset;
+  border: 0.2rem solid var(--main-color-light);
+  min-width: 0;
+  min-height: 0;  
 }
 
 @keyframes glint {
